Cleaned some things up.  No functional changes.  Still need to delete answers that have already been guessed, add a win statement, add time and guess count stats.

--- a/theModel.html
+++ b/theModel.html
@@ -9,8 +9,6 @@
     <body>
         <div id="winStatement"></div>
         <table class="eachOldGuess">
-
-
         </table>
 
         <br>
@@ -43,11 +41,17 @@
         </form>
         <br>
             <p>
-                Possible answers: r g b c y m <br>
+                Possible answers: r g b c y m <br> <br>
                 ! right color, right spot <br> ? right color, wrong spot <br>
                 1st 2 like this <b>&amp;</b> 1st 3 like this <br> <br>
 
-                Goal: guess all 5 answers
+                Goal: guess all 5 answers<br> <br>
+
+                Version notes: win counter can be messed up by inputting <br>
+                same win.  Nothing happens when you get all 5 wins.  <br>
+                Need to remove answers from the list so that the count <br>
+                changes (and so you can't guess a win you've already guessed) <br>
+                Lots to add, but works somewhat now.
             </p>
 
 
