--- a/game.html
+++ b/game.html
@@ -13,75 +13,40 @@
     <body>
         <div class="container main-content">
             <div id="winStatement"></div>
-            <div class="eachOldGuess">
-            </div>
+            <div class="eachOldGuess"></div>
 
             <br>
-            <form class="form-inline" id="guessSubmit">
+            <!-- <form class="form-inline" id="guessSubmit"> -->
+                <!-- <input id="guessAt0Input" class="form-control col-xs-1" type="text" size="1" value=""/>
+                <input id="guessAt1Input" class="form-control col-xs-1" type="text" size="1" value=""/>
+                <input id="guessAt2Input" class="form-control col-xs-1" type="text" size="1" value=""/>
+                <input id="guessAt3Input" class="form-control col-xs-1" type="text" size="1" value=""/>
+                <button id="submit-btn" class="btn">Submit</button> -->
+            <form id="guessSubmit">
 
-                    <input id="guessAt0Input" class="form-control" type="text" size="1" value=""/>
-                    <input id="guessAt1Input" class="form-control" type="text" size="1" value=""/>
-                    <input id="guessAt2Input" class="form-control" type="text" size="1" value=""/>
-                    <input id="guessAt3Input" class="form-control" type="text" size="1" value=""/>
+                    <input id="guessAt0Input" class="col-xs-1" type="text" size="1" value=""/>
+                    <input id="guessAt1Input" class="col-xs-1" type="text" size="1" value=""/>
+                    <input id="guessAt2Input" class="col-xs-1" type="text" size="1" value=""/>
+                    <input id="guessAt3Input" class="col-xs-1" type="text" size="1" value=""/>
                     <button id="submit-btn" class="btn">Submit</button>
 
                 <div id="errorStatement"></div>
             </form>
 
             <p>
-                Possible answers: r g b c y m <br> <br>
+                Possible answers: r g b c y m <br><br>
                 ! right color, right spot <br> ? right color, wrong spot <br>
                 1st 2 like this <b>&amp;</b> 1st 3 like this <br> <br>
 
                 Goal: guess all 5 answers<br> <br>
 
+                <a href="tutorial1.html">Click here for the tutorial</a><br>
+
             </p>
 
-        </div>
-    <script type="text/javascript">
-
-        window.onload = function() {
-
-
-            var textEntry0 = document.getElementById("guessAt0Input");
-            var textEntry1 = document.getElementById("guessAt1Input");
-            var textEntry2 = document.getElementById("guessAt2Input");
-            var textEntry3 = document.getElementById("guessAt3Input");
-
-            var textEntries = [textEntry0, textEntry1, textEntry2, textEntry3];
-
-            textEntries.forEach(function(element){
-                element.oninput = function() {
-
-                    switch(element.value) {
-                        case "r":
-                            element.style.backgroundColor = "red";
-                            break;
-                        case "g":
-                            element.style.backgroundColor = "green";
-                            break;
-                        case "b":
-                            element.style.backgroundColor = "blue";
-                            break;
-                        case "c":
-                            element.style.backgroundColor = "cyan";
-                            break;
-                        case "y":
-                            element.style.backgroundColor = "yellow";
-                            break;
-                        case "m":
-                            element.style.backgroundColor = "magenta";
-                            break;
-                        default:
-                            element.style.backgroundColor = "";
-                    }
-
-                };
-            });
-
-        }
-    </script>
+        </div> <!--CONTAINER DIV FOR MAIN CONTENT -->
+    <script type="text/javascript" src="js/inputColorer.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/scriptGame.js"></script>
+    <script src="js/game.js"></script>
     </body>
 </html>
