server ready. got rid of second button on tutorial4 bug, added mile markers

--- a/tutorial1.html
+++ b/tutorial1.html
@@ -29,7 +29,7 @@
             </form>
             <br>
                 <p>
-                    Tutorial mode: guessing 1 random color <br>
+                    Tutorial (1/4) mode: guessing 1 random color <br>
                     Possible answers: r g b c y m <br> <br>
 
                     Goal: you're guessing a random color<br> <br>
