--- a/tutorial2.html
+++ b/tutorial2.html
@@ -29,7 +29,7 @@
             </form>
             <br>
             <p>
-                Tutorial mode: guessing one code made up of two colors.<br>
+                Tutorial (2/4) mode: guessing one code made up of two colors.<br>
                 An answer could be r and b, m and g, or y and y, for example<br>
                 Possible colors: r g b c y m <br> <br>
 
