--- a/tutorial2part2.html
+++ b/tutorial2part2.html
@@ -26,7 +26,7 @@
             </form>
             <br>
             <p>
-                Tutorial mode: guessing three codes, each made up of two colors.<br>
+                Tutorial (2.5/4) mode: guessing three codes, each made up of two colors.<br>
                 An answer could be r and b, m and g, or y and y, for example<br>
                 Possible colors: r g b c y m <br> <br>
 
