--- a/tutorial3.html
+++ b/tutorial3.html
@@ -28,7 +28,7 @@
             </form>
             <br>
             <p>
-                Tutorial mode: guessing three codes, each made up of three colors.<br>
+                Tutorial (3/4) mode: guessing three codes, each made up of three colors.<br>
                 Possible colors: r g b c y m <br> <br>
 
                 You are given clues to help get the answer faster <br>
