--- a/tutorial4.html
+++ b/tutorial4.html
@@ -22,23 +22,21 @@
 
             <form id="guessSubmit">
 
-                <form id="guessSubmit">
+                <input id="guessAt0Input" class="col-xs-1" type="text" size="1" value=""/>
+                <input id="guessAt1Input" class="col-xs-1" type="text" size="1" value=""/>
+                <input id="guessAt2Input" class="col-xs-1" type="text" size="1" value=""/>
+                <input id="guessAt3Input" class="col-xs-1" type="text" size="1" value=""/>
+                <button id="submit-btn" class="btn">Submit</button>
 
-                        <input id="guessAt0Input" class="col-xs-1" type="text" size="1" value=""/>
-                        <input id="guessAt1Input" class="col-xs-1" type="text" size="1" value=""/>
-                        <input id="guessAt2Input" class="col-xs-1" type="text" size="1" value=""/>
-                        <input id="guessAt3Input" class="col-xs-1" type="text" size="1" value=""/>
-                        <button id="submit-btn" class="btn">Submit</button>
-
-                    <div id="errorStatement"></div>
-                </form>
                 <div id="errorStatement"></div>
-                <button id="submit-btn">Submit</button>
 
 
             </form>
             <br>
                 <p>
+                    Tutorial (4/4) Mode: the only difference now <br>
+                    is that this mode has 3 answers whereas the <br>
+                    full game has 5 answers<br>
                     Possible answers: r g b c y m <br> <br>
 
                     ! right color, right spot <br> ? right color, wrong spot <br>
@@ -47,7 +45,7 @@
                     Goal: guess all 3 answers<br> <br>
 
                     <a href="game.html">Click here to skip to the game</a><br>
-                    
+
                 </p>
 
         </div> <!--CONTAINER DIV FOR MAIN CONTENT -->
